[gd_scene load_steps=8 format=1]

[ext_resource path="res://ui/themes/ImpressiveTitle.tres" type="Theme" id=1]
[ext_resource path="res://ui/LoginScreen.gd" type="Script" id=2]
[ext_resource path="res://ui/images/backdrop1.jpg" type="Texture" id=3]
[ext_resource path="res://ui/images/startscreen.png" type="Texture" id=4]
[ext_resource path="res://ui/fonts/ConsolaMono.ttf" type="DynamicFontData" id=5]

[sub_resource type="StyleBoxTexture" id=1]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 4 )
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 16.0
expand_margin/right = 16.0
expand_margin/top = 16.0
expand_margin/bottom = 16.0
draw_center = true

[sub_resource type="DynamicFont" id=2]

font/size = 24
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 5 )

[node name="LoginScreen" type="Control"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 1 )
margin/left = 0.0
margin/top = 0.0
margin/right = 984.0
margin/bottom = 728.0
script/script = ExtResource( 2 )

[node name="BG" type="TextureFrame" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = -984.0
margin/bottom = -728.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 0

[node name="Panel" type="Panel" parent="."]

anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 40.0
margin/top = 40.0
margin/right = 450.0
margin/bottom = -680.0
custom_styles/panel = SubResource( 1 )

[node name="MultiplayerLabel" type="Label" parent="Panel"]

anchor/right = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 10.0
margin/bottom = 70.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.46875, 0, 1 )
text = "Multiplayer"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Inputs" type="HBoxContainer" parent="Panel"]

anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 40.0
margin/top = 200.0
margin/right = 50.0
margin/bottom = 250.0
alignment = 0

[node name="Labels" type="VBoxContainer" parent="Panel/Inputs"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 81.0
margin/bottom = 50.0
alignment = 0

[node name="UsernameLabel" type="Label" parent="Panel/Inputs/Labels"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 81.0
margin/bottom = 23.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Username:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="PasswordLabel" type="Label" parent="Panel/Inputs/Labels"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 27.0
margin/right = 81.0
margin/bottom = 50.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Password:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="TextInputs" type="VBoxContainer" parent="Panel/Inputs"]

rect/min_size = Vector2( 225, 50 )
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 85.0
margin/top = 0.0
margin/right = 310.0
margin/bottom = 50.0
alignment = 0

[node name="Username" type="LineEdit" parent="Panel/Inputs/TextInputs"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 225.0
margin/bottom = 23.0
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="Password" type="LineEdit" parent="Panel/Inputs/TextInputs"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 27.0
margin/right = 225.0
margin/bottom = 50.0
placeholder/alpha = 0.6
secret = true
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="Buttons" type="VBoxContainer" parent="Panel"]

anchor/top = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 90.0
margin/top = 240.0
margin/right = 90.0
margin/bottom = 52.0
custom_constants/separation = 32
alignment = 0

[node name="LoginButton" type="Button" parent="Panel/Buttons"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 230.0
margin/bottom = 23.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Log In"
flat = false

[node name="NewAccountButton" type="Button" parent="Panel/Buttons"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 55.0
margin/right = 230.0
margin/bottom = 78.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "New Account"
flat = false

[node name="ChangePasswordButton" type="Button" parent="Panel/Buttons"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 110.0
margin/right = 230.0
margin/bottom = 133.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Change Password"
flat = false

[node name="BackButton" type="Button" parent="Panel/Buttons"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 165.0
margin/right = 230.0
margin/bottom = 188.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Back"
flat = false

[connection signal="pressed" from="Panel/Buttons/LoginButton" to="." method="_on_LoginButton_pressed"]

[connection signal="pressed" from="Panel/Buttons/NewAccountButton" to="." method="_on_NewAccountButton_pressed"]

[connection signal="pressed" from="Panel/Buttons/ChangePasswordButton" to="." method="_on_ChangePasswordButton_pressed"]

[connection signal="pressed" from="Panel/Buttons/BackButton" to="." method="_on_BackButton_pressed"]


